# PartSortFinal

./: CMakeLists.txt  client_cpp_sdk_tutorial.cpp  color intrinsics d435 1280x720.txt  color intrinsics d435 848x480.txt  depth intrinsics d435 1280x720.txt  depth intrinsics d435 848x480.txt  test.cpp
dat/yolo/deinSchrank/: yolov3-tiny.cfg
src/: FinalApplication.cpp  acquisition.cpp  acquisition.hpp  dataStructures.h  objectDetection2D.cpp  objectDetection2D.hpp  sampleclient.cpp  sampleclient.h
